feat: create docs files for other components stories

--- a/frontend/components/Title/stories/Title.docs.mdx
+++ b/frontend/components/Title/stories/Title.docs.mdx
@@ -6,6 +6,9 @@ import { Title } from '../{Relative path}/Title';
 ## Компонент "Заголовок". 
 Текст всех заголовков на странице необходимо обернуть в комопнент  `Title`.
 
+```tsx
+  <Title size={titleSize} tag={titleTag} />
+```
 
 Имеет базовые стили заголовка в соответствии с дизайн системой: 
  * font-family
