--- a/frontend/components/Title/stories/Title.docs.mdx
+++ b/frontend/components/Title/stories/Title.docs.mdx
@@ -7,7 +7,7 @@ import { Title } from '../{Relative path}/Title';
 Текст всех заголовков на странице необходимо обернуть в комопнент  `Title`.
 
 ```tsx
-  <Title size={titleSize} tag={titleTag} />
+  <Title size={titleSize} tag={titleTag}>{children}</Title>
 ```
 
 Имеет базовые стили заголовка в соответствии с дизайн системой: 
