feat: describe navlink component, add next-router-addon

--- a/frontend/components/CatalogNav/stories/CatalogNav.docs.mdx
+++ b/frontend/components/CatalogNav/stories/CatalogNav.docs.mdx
@@ -3,8 +3,8 @@
 ```tsx
 import { CatalogNav } from '../{Relative path}/CatalogNav';
 ```
-## Компонент "Заголовок". 
-  Меню навигации по каталогу.
+## Компонент "Навигация". 
+  Меню навигации по каталогу. 
 
 ```tsx
   <CatalogNav />
